crates/runtime/src/tests/snapshots/query_select_values.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM (VALUES (1, 'one'), (2, 'two'), (3, 'three'));\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                Wildcard(
                                    WildcardAdditionalOptions {
                                        wildcard_token: TokenWithSpan {
                                            token: Mul,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                        opt_ilike: None,
                                        opt_exclude: None,
                                        opt_except: None,
                                        opt_replace: None,
                                        opt_rename: None,
                                    },
                                ),
                            ],
                            into: None,
                            from: [
                                TableWithJoins {
                                    relation: Derived {
                                        lateral: false,
                                        subquery: Query {
                                            with: None,
                                            body: Values(
                                                Values {
                                                    explicit_row: false,
                                                    rows: [
                                                        [
                                                            Value(
                                                                Number(
                                                                    "1",
                                                                    false,
                                                                ),
                                                            ),
                                                            Value(
                                                                SingleQuotedString(
                                                                    "one",
                                                                ),
                                                            ),
                                                        ],
                                                        [
                                                            Value(
                                                                Number(
                                                                    "2",
                                                                    false,
                                                                ),
                                                            ),
                                                            Value(
                                                                SingleQuotedString(
                                                                    "two",
                                                                ),
                                                            ),
                                                        ],
                                                        [
                                                            Value(
                                                                Number(
                                                                    "3",
                                                                    false,
                                                                ),
                                                            ),
                                                            Value(
                                                                SingleQuotedString(
                                                                    "three",
                                                                ),
                                                            ),
                                                        ],
                                                    ],
                                                },
                                            ),
                                            order_by: None,
                                            limit: None,
                                            limit_by: [],
                                            offset: None,
                                            fetch: None,
                                            locks: [],
                                            for_clause: None,
                                            settings: None,
                                            format_clause: None,
                                        },
                                        alias: None,
                                    },
                                    joins: [],
                                },
                            ],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Projection: *",
            "  Values: (Int64(1), Utf8(\"one\")), (Int64(2), Utf8(\"two\")), (Int64(3), Utf8(\"three\"))",
        ],
    ),
    Ok(
        [
            "+---------+---------+",
            "| column1 | column2 |",
            "+---------+---------+",
            "| 1       | one     |",
            "| 2       | two     |",
            "| 3       | three   |",
            "+---------+---------+",
        ],
    ),
)
