crates/runtime/src/tests/snapshots/query_show_databases.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SHOW DATABASES\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            ShowDatabases {
                terse: false,
                history: false,
                show_options: ShowStatementOptions {
                    show_in: None,
                    starts_with: None,
                    limit: None,
                    limit_from: None,
                    filter_position: None,
                },
            },
        ),
    ),
    Err(
        NotImplemented(
            "Unsupported SQL statement: SHOW DATABASES",
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
