crates/runtime/src/tests/snapshots/query_show_tables.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SHOW TABLES\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            ShowTables {
                terse: false,
                history: false,
                extended: false,
                full: false,
                external: false,
                show_options: ShowStatementOptions {
                    show_in: None,
                    starts_with: None,
                    limit: None,
                    limit_from: None,
                    filter_position: None,
                },
            },
        ),
    ),
    Ok(
        [
            "Projection: *",
            "  TableScan: information_schema.tables",
        ],
    ),
    Ok(
        [
            "+---------------+--------------------+-------------------+------------+",
            "| table_catalog | table_schema       | table_name        | table_type |",
            "+---------------+--------------------+-------------------+------------+",
            "| datafusion    | public             | d2                | BASE TABLE |",
            "| datafusion    | public             | departments       | BASE TABLE |",
            "| datafusion    | public             | monthly_sales     | BASE TABLE |",
            "| datafusion    | public             | d1                | BASE TABLE |",
            "| datafusion    | public             | sales             | BASE TABLE |",
            "| datafusion    | public             | target_table      | BASE TABLE |",
            "| datafusion    | public             | leased_bicycles   | BASE TABLE |",
            "| datafusion    | public             | employee_table    | BASE TABLE |",
            "| datafusion    | public             | ftable1           | BASE TABLE |",
            "| datafusion    | public             | t1                | BASE TABLE |",
            "| datafusion    | public             | source_table      | BASE TABLE |",
            "| datafusion    | public             | products          | BASE TABLE |",
            "| datafusion    | public             | t2                | BASE TABLE |",
            "| datafusion    | public             | returned_bicycles | BASE TABLE |",
            "| datafusion    | public             | employees         | BASE TABLE |",
            "| datafusion    | public             | department_table  | BASE TABLE |",
            "| datafusion    | public             | quarterly_sales   | BASE TABLE |",
            "| datafusion    | information_schema | tables            | VIEW       |",
            "| datafusion    | information_schema | views             | VIEW       |",
            "| datafusion    | information_schema | columns           | VIEW       |",
            "| datafusion    | information_schema | df_settings       | VIEW       |",
            "| datafusion    | information_schema | schemata          | VIEW       |",
            "| datafusion    | information_schema | routines          | VIEW       |",
            "| datafusion    | information_schema | parameters        | VIEW       |",
            "+---------------+--------------------+-------------------+------------+",
        ],
    ),
)
